# ghorbu-wallet

./: README.md  package-lock.json  package.json  tailwind.config.cjs  vite.config.js
.github/workflows/: publish.yml
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/coin_selection/: error.rs  fee_estimation.rs  largest_first.rs  mod.rs  random_improve.rs
src-tauri/src/encryption/: error.rs  mod.rs
src-tauri/src/keys/: address.rs  bip32.rs  bip39.rs  error.rs  mod.rs  pbkdf2.rs
src-tauri/src/keys/bip44/: mod.rs  private_hierarchy.rs  public_hierarchy.rs
src-tauri/src/networking/: error.rs  fee.rs  mod.rs  transaction.rs  utxo.rs
src-tauri/src/transactions/: error.rs  mod.rs  script.rs  transaction.rs  utxo.rs
src-tauri/src/utils/: base58.rs  hex.rs  mod.rs  varint.rs
src/create-wallet/: CreateMnemonic.svelte  CreatePassphrase.svelte  CreatePassword.svelte  Initial.svelte  ShowMnemonic.svelte
src/utils/: Spinner.svelte
src/wallet/: AccountOverview.svelte  Login.svelte  NewAccount.svelte  NewAddressButton.svelte  Receive.svelte  Send.svelte  ShowNewAddress.svelte  Transactions.svelte  Wallet.svelte  WelcomeScreen.svelte
