[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.5", features = ["api-all"] }

argon2 = "0.4"
rand_core = { version = "0.6", features = ["std"] }
aes-gcm = "0.9.4"
bincode = "1.3.3"
dirs = "4.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
bitcoin_hashes = "0.11.0"
bitvec = "1.0.1"
num-bigint = "0.4"
secp256k1 = "0.24.0"
lazy_static = "1.1.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
